# rpi3-rust-fel4-workspace

./: .gitmodules  README.md
bcm2837/: Cargo.toml
bcm2837-hal/: Cargo.toml
bcm2837-hal/src/: clocks.rs  delay.rs  dma.rs  gpio.rs  lib.rs  mailbox.rs  pmem.rs  serial.rs  spi.rs  time.rs
bcm2837-hal/src/mailbox_msg/: blank_screen.rs  framebuffer.rs  get_arm_mem.rs  get_fb_phy_size.rs  get_serial_num.rs  get_temperature.rs  get_vc_mem.rs  mod.rs  set_cursor_state.rs
bcm2837/src/: dma.rs  gpio.rs  lib.rs  mbox.rs  spi0.rs  uart1.rs
clock-display/: .gitignore  Cargo.toml  README.md
clock-display/src/: clock.rs  lib.rs  render_thread.rs
display/: Cargo.toml
display/src/: display_color.rs  lib.rs
dma-example/: Cargo.toml  README.md
dma-example/src/: lib.rs
fb-display-example/: Cargo.toml  fel4.toml
fb-display-example/src/: lib.rs
graphics-example/: Cargo.toml  README.md
graphics-example/src/: lib.rs
gui/: Cargo.toml
gui/src/: bar_graph.rs  circle_digit.rs  lib.rs
hello-world/: .gitignore  Cargo.toml
hello-world/target_specs/: aarch64-sel4-fel4.json
mbox-device-example/: Cargo.toml  README.md
mbox-device-example/src/: lib.rs  macros.rs
spi-enc28j60-eth-example/: README.md
