[package]
name = "mbox-device-test"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2015"

[dependencies]
# NOTE: We use a git dependency directly since the git submodules
# don't currently work when pulled down from crates.io
# libsel4-sys = "0.5"
libsel4-sys = {git = "https://github.com/jonlamb-gh/libsel4-sys.git", branch = "add-rpi3-support"}
sel4twinkle-alloc = { path = "../sel4twinkle-alloc-rs" }
#bcm2837 = { path = "../bcm2837" }
bcm2837-hal = { path = "../bcm2837-hal" }

[dependencies.wee_alloc]
version = "0.4"
features = ["static_array_backend"]
optional = true

[dependencies.proptest]
version = "0.8.6"
default-features = false
features = ["alloc", "nightly"]
optional = true

[features]
default = []
alloc = ["wee_alloc"]
test = ["alloc", "proptest"]
